2010-02-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepBase/behavior.h:
	* Source/Additions/behavior.m:
	* Source/Additions/GNUmakefile:
	Remove obsolete, unused, and long deprecated code.
	The functinality is still present in GSObjCRuntime.[hm]

2010-02-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSObjCRuntime.h:
	* Source/NSObjCRuntime.m:
	Fix NSGetSizeAndAlignment() update argument types to match lates OSX

2010-02-28 Richard Frith-Macdonald <rfm@gnu.org>

	Update header files with further changes for non-fragile-abi.
	Also fixup some GSObjCRuntime.m functions for using the new runtime
	API.

2010-02-28 Thomas Gamper <icicle@cg.tuwien.ac.at>

	* runtime.c:
	Backport another one of David's fixes for @synchronize(class), all
	necessary flags now are set in objc_allocateMetaClass.

2010-02-27 Richard Frith-Macdonald <rfm@gnu.org>

	* runtime.c:
	* sync.m:
	* runtime.h:
	Backport David's fixes for @synchronize(class), suitably modified to
	build with older compilers.

2010-02-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: ([methodSignatureForSelector:]) remote the check
	(and exception) to see if the sel types are the same as the signature
	types, since this method is used precisesly when we think we may have
	a selector with the wrong type information (eg we are using KVC and
	generated the selector name to access an ivar and the runtime gave us
	a selector with the type infor for accessing an ivar of another class).
	Should fix bug #29015

2010-02-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Apply suggested fix for bug #29012

2010-02-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m:
	* Source/GSInternal.h:
	* Source/NSConnection.m:
	* Headers/Foundation/NSConnection.h:
	* Headers/Foundation/NSOperation.h:
	* Headers/Additions/GNUstepBase/GSVersionMacros.h:
	Rework hiding of instance variables for big classes (lots of ivars)